Related Work and Consistency Review

--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -17,7 +17,8 @@ Redirect the `BASEFEE` introduced by ECIP-1111 (EIP-1559) into a protocol-define
 
 ### Abstract
 
-This ECIP specifies the creation and integration of the Olympia Treasury, a protocol-level smart contract deployed at a fixed address on Ethereum Classic. Upon activation of the Olympia Upgrade (ECIP-1111), all `BASEFEE` revenue from EIP-1559 transactions will be redirected to this treasury contract instead of being burned. The treasury will serve as a decentralized and transparent funding mechanism to support Ethereum Classic’s long-term infrastructure, ecosystem growth, and client development. The contract will be immutable, externally auditable, and interoperable with a permissionless governance system (Olympia DAO) responsible for disbursing funds via on-chain proposals.
+This ECIP specifies the creation and integration of the Olympia Treasury, a protocol-level smart contract deployed at a fixed address on Ethereum Classic. Upon activation of the Olympia Upgrade (ECIP-1111), all `BASEFEE` revenue from EIP-1559 transactions will be redirected to this treasury contract instead of being burned. The treasury will serve as a decentralized and transparent funding mechanism to support Ethereum Classic’s long-term infrastructure, ecosystem growth, and client development. The contract will be immutable, externally auditable, and interoperable with a permissionless governance system (Olympia DAO) responsible for disbursing funds via on-chain proposals. The design follows emerging standards used by networks such as Ronin, Celo, and Mantle, which also redirect basefee revenue to protocol-owned treasuries.
+
 
 ### Motivation
 
@@ -31,7 +32,8 @@ With ECIP-1017 reducing block rewards over time, Ethereum Classic must establish
 
 The Olympia Treasury contract SHALL be deployed at a fixed, deterministic address. This address is hardcoded into Ethereum Classic’s consensus rules as the recipient of the `BASEFEE` defined in ECIP-1111.
 
-- **Address (placeholder)**: `0x0000000000000000000000000000000000OLYMPIA`
+- **Address (placeholder)**: `0x0000000000000000000000000000000000OLYMPIA`  
+  _(final address will be published prior to testnet deployment and agreed by client implementers)_
 
 The final address will be derived using the `CREATE` or `CREATE2` opcode during network upgrade coordination and MUST be reproducible by all client implementations.
 
@@ -75,7 +77,19 @@ The Olympia Treasury contract serves as the cornerstone of Ethereum Classic’s 
 
 - **Governance Modularity**: Decoupling treasury logic from governance logic allows flexibility in upgrading or replacing governance contracts (e.g. Olympia DAO) without altering the Treasury contract itself. This modularity protects against capture, mismanagement, or design flaws in any single governance system.
 
-The result is a system that reflects Ethereum Classic’s values — decentralization, transparency, sovereignty — while ensuring it can grow and compete in the modern EVM landscape.
+The result is a system that reflects Ethereum Classic’s values — decentralization, transparency, sovereignty — while ensuring it can grow and compete in the modern EVM landscape. Similar treasury redirection mechanisms have been adopted by other EVM-compatible networks. Ronin (a sidechain for Axie Infinity) routes its EIP-1559 basefee to a treasury contract governed by its DAO. Celo redirects gas fees to a Gas Fee Handler that supports carbon offset and community programs. Mantle, an L2 rollup, similarly redirects sequencer revenue to a DAO-governed treasury vault. These precedents validate Ethereum Classic’s approach and demonstrate the viability of basefee redirection for sustainable ecosystem funding.
+
+### Related Work
+
+The Olympia Treasury design is inspired by similar EVM-compatible implementations that redirect protocol fees to public goods funding or DAO-governed treasuries:
+
+- **Ronin Network** (Axie Infinity sidechain): Redirects EIP-1559 `BASEFEE` to [Ronin Treasury Contract](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217).
+- **Celo** (L1): Directs gas fees to a [Gas Fee Handler](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438), which routes funds to carbon offset and community programs.
+- **Mantle** (L2): Implements a modular treasury with [gas fee redirection](https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow) governed by MantleDAO.
+- **Polygon CDK** (modular L2 framework): Supports EIP-1559 and modular DAO-managed treasuries as part of its rollup architecture for sovereign chains. See [Polygon CDK overview](https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos).
+- **OP Stack** (used by Base, Optimism): Implements EIP-1559 and supports custom sequencer fee splitting, although it does not currently redirect `BASEFEE` to a DAO treasury. Serves as a contrast to the full redirection model.
+
+These examples validate the redirect model as an emerging standard among EVM networks prioritizing sustainable funding and decentralized governance.
 
 ### Implementation
 
