--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -19,7 +19,7 @@ This ECIP defines the on-chain governance framework for the Olympia DAO, the dec
 
 This ECIP specifies the structure, roles, and functions of the Olympia DAO — a decentralized autonomous organization that governs the Olympia Treasury contract (ECIP-1112) and oversees the allocation of on-chain development funds on Ethereum Classic. The DAO framework supports permissionless proposal submission, transparent community voting, and time-locked execution of approved proposals.
 
-The Olympia DAO is implemented as a smart contract system composed of governance logic, voting mechanisms, and disbursement interfaces. It operates independently from any central authority and is governed by ETC holders or designated stakeholders who participate in decision-making through on-chain processes. The DAO ensures that Ethereum Classic’s protocol-level funding is allocated fairly, transparently, and in alignment with the network’s values of decentralization, immutability, and sovereignty.
+The Olympia DAO is implemented as a smart contract system composed of governance logic, voting mechanisms, and disbursement interfaces. It operates independently from any central authority and is governed by ETC stakeholders via open participation in decision-making through on-chain processes. The DAO ensures that Ethereum Classic’s protocol-level funding — sourced from redirected BASEFEE revenue per ECIP-1112 — is allocated fairly, transparently, and in alignment with the network’s values of decentralization, immutability, and sovereignty.
 
 ### Motivation
 
@@ -36,6 +36,8 @@ The Olympia DAO is designed to:
 
 By transitioning from a model of discretionary funding to one based on on-chain rules and stakeholder consensus, Ethereum Classic reinforces its commitment to sovereignty, neutrality, and long-term sustainability.
 
+Other EVM networks such as Ronin, Celo, and Mantle have adopted similar governance architectures where protocol fee revenue is directed to DAO-controlled treasuries. Olympia DAO builds on these proven designs, enabling Ethereum Classic to govern its basefee-derived treasury with transparency, decentralization, and permissionless participation — all without altering ETC’s monetary policy or Proof-of-Work consensus.
+
 ### Specification
 
 #### Governance Model
@@ -50,7 +52,7 @@ The DAO MUST include the following core components:
   - Purpose and scope of work
   - Proposed disbursement schedule (e.g., milestones, vesting, single payout)
 
-- **Voting Mechanism**: Proposals SHALL be subject to an on-chain voting process governed by a transparent stake-based or reputation-based system. Initial implementation MAY use token-weighted voting (e.g., ETC or a non-transferable participation token), subject to future upgrade.
+- **Voting Mechanism**: Proposals SHALL be subject to an on-chain voting process governed by a transparent stake-based or reputation-based system. Initial implementation MAY use token-weighted voting (e.g., staked ETC, a soulbound participation token such as veOLY, or quadratic models), subject to future upgrade. The initial veOLY or governance token supply mechanism SHALL be established via a DAO-approved proposal, with no pre-allocation.
 
 - **Quorum and Thresholds**:
   - A minimum quorum MUST be required for any vote to pass.
@@ -88,13 +90,41 @@ Key motivations include:
 
 The Olympia DAO does not seek to control the Ethereum Classic protocol itself but instead manages the allocation of funds in support of its development and infrastructure. Protocol upgrades will continue to follow the ECIP process (ECIP-1000), while funding decisions for implementation and ecosystem grants are governed by this DAO.
 
+DAOs on networks like Celo and Ronin serve as governance layers for treasury flows derived from gas fees. By modeling Olympia DAO similarly—where BASEFEE revenue is transparently governed through tokenholder proposals and on-chain execution—Ethereum Classic can adopt a mature and decentralized mechanism aligned with EVM ecosystem practices. Olympia DAO mirrors the modular design adopted by other successful EVM DAO frameworks. Celo routes gas fees through a community-governed handler. Ronin Treasury proposals are governed by tokenholder votes. MantleDAO manages sequencer revenue allocation through DAO smart contracts. Olympia DAO follows this emerging pattern by cleanly separating treasury execution (ECIP-1112) from governance intent (this ECIP), ensuring long-term resilience and governance upgradability.
+
+### Related Work
+
+Olympia DAO draws inspiration from governance frameworks and DAO-treasury integrations used across the EVM ecosystem:
+
+- **Celo**: Implements community-governed treasury flows through its Gas Fee Handler and Carbon Offset Reserve, funded by gas fee redirection.
+- **Ronin Network**: Utilizes tokenholder governance to manage a basefee-funded treasury for ecosystem grants and validator rewards.
+- **Mantle**: Employs a modular DAO system (MantleDAO) to manage sequencer-generated protocol fees in a transparent, on-chain process.
+- **Polygon CDK**: Enables rollup deployers to integrate modular DAOs and EIP-1559-compatible treasury flows into sovereign chains.
+- **OP Stack (Base, Optimism)**: While not redirecting basefee to treasuries, these systems implement custom fee splits via sequencer rewards governed by L2 tokenholder proposals.
+
+These models validate Olympia DAO’s architecture as consistent with best practices for decentralized funding and EVM-aligned governance.
+
+Olympia DAO also draws technical inspiration from mature, battle-tested governance frameworks that have governed significant on-chain treasuries and evolved with ecosystem best practices:
+
+- **Aragon OSx (used by Lido DAO)**: A modular and upgradeable DAO stack that enables fine-grained permission management and secure on-chain governance. Audited by Halborn and Code4rena, Aragon has secured billions in value for DAOs like Lido and API3. Its governance system supports proposal submission, on-chain voting, and treasury execution through customizable plugins.
+
+- **Compound Governor Bravo**: The second-generation governance system for Compound Finance. It introduced configurable voting delays, thresholds, and quorum requirements. Widely used and audited, Bravo enables token-weighted proposal flows with timelock-enforced execution.
+
+- **OpenZeppelin Governor**: A modular governance contract suite that mirrors Compound's model but allows flexible integration of voting modules (e.g., ERC-20, ERC-721, veTokens). OpenZeppelin Governor contracts are audited and form the backbone of many DAO deployments due to their composability and clarity.
+
+- **Aave DAO Governance Framework**: Aave Improvement Proposals (AIPs) follow a token-weighted voting process with configurable thresholds, followed by execution via audited TimelockExecutors. Aave’s DAO system has governed multibillion-dollar treasuries and introduced cross-chain governance extensions with timelock safety.
+
+These frameworks validate Olympia DAO’s architecture by demonstrating secure, upgradable systems that support open participation, transparent execution, and scalable governance logic. Olympia DAO adapts these principles to Ethereum Classic’s unique Proof-of-Work and immutability guarantees.
+
 ### Implementation
 
 The Olympia DAO governance system will be implemented as a modular set of smart contracts deployed on Ethereum Classic, designed to interact directly with the Olympia Treasury (ECIP-1112). The system includes the following components:
 
 #### 1. **Governor Contract**
 - Core logic for proposal submission, voting, and execution.
-- Inspired by battle-tested frameworks like OpenZeppelin Governor and Compound Governor Bravo.
+- Inspired by battle-tested frameworks like:
+  - [OpenZeppelin Governor](https://github.com/OpenZeppelin/openzeppelin-contracts/tree/master/contracts/governance)
+  - [Compound Governor Bravo](https://github.com/compound-finance/governance)
 - Customizable parameters such as:
   - Proposal threshold
   - Voting delay and period
