--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -131,7 +131,7 @@ Key reasons for defining the ECFP process include:
 - **Alignment with ETC Principles**  
   The ECFP process reflects Ethereum Classic’s commitment to decentralization, sovereignty, and trust minimization. It replaces opaque, foundation-based grantmaking with a public, rules-based system that any community member can engage with.
 
-This ECIP ensures that the Olympia Treasury — funded via ECIP-1112 and governed via ECIP-1113 — has a robust and community-driven framework for advancing the Ethereum Classic ecosystem.
+This ECIP ensures that the Olympia Treasury — funded via ECIP-1112 and governed via ECIP-1113 — has a robust and community-driven framework for advancing the Ethereum Classic ecosystem. The ECFP framework ensures Ethereum Classic evolves with the DAO-first ethos of modern decentralized ecosystems, bringing funding structure comparable to processes like Arbitrum’s AIP framework, Optimism’s RPGF, and Celo’s Community Fund. By defining a public, reproducible, and accountable pipeline for distributing protocol-level resources, the ECFP system empowers ETC to grow sustainably while preserving the network’s founding principles.
 
 ### Implementation
 
@@ -144,6 +144,9 @@ Key implementation elements include:
 - A dedicated ECFP submission portal SHALL be provided at `https://github.com/ethereumclassic/ECFPs`.
 - Proposals MUST include a valid ECFP number (assigned sequentially), title, rationale, funding amount, recipient address, and milestone schedule.
 - Metadata pointers (e.g., IPFS, Arweave) SHALL be used for full-text proposal storage and human-readable content.
+- Proposals SHOULD use the [ECFP Markdown template](https://github.com/ethereumclassic/ECFPs/blob/main/ecfp-template.md) to ensure consistency and ease of review.
+- Off-chain proposal metadata MUST be stored in a content-addressable format (e.g., IPFS CID or Arweave URL) and referenced in the on-chain proposal via metadata hash or URL.
+- Proposals MAY include links to mockups, prototypes, GitHub repos, or community endorsements as part of their metadata payload.
 
 #### 2. On-Chain Registry and Voting
 
@@ -158,8 +161,14 @@ Key implementation elements include:
   - One-time lump sum transfers,
   - Scheduled milestone-based vesting,
   - Or programmatic streams via contract-based disbursers.
-
-- All transfers MUST emit an `ECFPExecuted` event with the corresponding proposal ID.
+- Execution MUST emit a standardized `ProposalExecuted` event from the DAO contract, including:
+  - `ECFP ID`
+  - Recipient address
+  - Amount disbursed
+  - Timestamp and block number
+  - Executing proposal hash or reference
+- All disbursements SHALL adhere to the execution rules defined in the Olympia Treasury (ECIP-1112), which rejects any transfers not authorized by a successful on-chain proposal.
+- The `execute()` or `release()` calls MUST include the associated `ECFP ID` and disbursement metadata in the transaction payload to ensure traceability and enforce auditability.
 
 #### 4. Transparency Dashboard
 
@@ -205,6 +214,14 @@ The ECFP process introduces formal structures for requesting and disbursing prot
 - **Treasury Integrity**: Only the DAO should be able to trigger treasury disbursements. The Olympia Treasury contract must reject direct access from EOAs or unauthorized contracts.
 
 - **Reentrancy or Logic Bugs**: DAO and Treasury contracts must be formally verified and audited to prevent reentrancy attacks, logic errors, or unintended side effects during proposal execution.
+
+- **Metadata Integrity**: Off-chain proposal documents referenced in ECFPs must include their content hash in the on-chain metadata to prevent tampering or metadata spoofing. This ensures that the voted-upon proposal content cannot be altered post-submission.
+
+- **Replay Safety**: ECFP executions MUST be protected against replay attacks across testnet/mainnet by including a chain ID and governance domain separator in the execution hash.
+
+- **Redundant Event Logging**: To support full audit trails, the DAO and Treasury contracts SHOULD both emit disbursement-related events when a proposal is executed. Indexers can cross-check event logs for consistency.
+
+- **Proposal Uniqueness**: Each ECFP ID MUST be unique and immutable once assigned to prevent double-spend proposals or conflicting execution attempts.
 
 Thorough testing on testnet, rigorous code review, and community participation are essential to minimize these risks prior to mainnet deployment.
 
