--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -12,11 +12,11 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This proposal activates select Ethereum protocol upgrades on Ethereum Classic via a hard fork named Olympia. Specifically, it introduces EIP-1559 and EIP-3198 to enhance Ethereum Classic’s EVM compatibility, improve gas pricing, and redirect the `BASEFEE` to a decentralized, permissionless on-chain treasury (defined in ECIP-1112) for sustainable development funding. The goal is to enhance interoperability with the broader Ethereum ecosystem while preserving Ethereum Classic's Proof-of-Work consensus and core principles.
+This proposal activates select Ethereum protocol upgrades on Ethereum Classic via a hard fork named Olympia. Specifically, it introduces EIP-1559 and EIP-3198 to enhance Ethereum Classic’s EVM compatibility, improve gas pricing, and redirect the `BASEFEE` to a decentralized, permissionless on-chain treasury (ECIP-1112), governed by Olympia DAO (ECIP-1113), for sustainable development funding. The goal is to enhance interoperability with the broader Ethereum ecosystem while preserving Ethereum Classic's Proof-of-Work consensus and core principles.
 
 ### Abstract
 
-This ECIP proposes the activation of selected Ethereum protocol upgrades on the Ethereum Classic network under the hard fork name Olympia. The upgrade includes EIP-1559, which introduces a dynamic base fee mechanism to improve transaction fee predictability and market efficiency, and EIP-3198, which adds the BASEFEE opcode for EVM compatibility. These changes are intended to enhance interoperability with Ethereum and other EVM-based networks while preserving Ethereum Classic’s Proof-of-Work consensus and immutability principles. The Olympia Treasury (see ECIP-1112) receives all `BASEFEE` revenue, which is governed by Olympia DAO (ECIP-1113) using the Ethereum Classic Funding Proposal process (ECIP-1114), and executed off-chain by Ethereum Classic DAO LLC as a legal interface for compliance, payments, and treasury administration.
+This ECIP proposes the activation of selected Ethereum protocol upgrades on the Ethereum Classic network under the hard fork name Olympia. The upgrade includes EIP-1559, which introduces a dynamic base fee mechanism to improve transaction fee predictability and market efficiency, and EIP-3198, which adds the BASEFEE opcode for EVM compatibility. These changes are intended to enhance interoperability with Ethereum and other EVM-based networks while preserving Ethereum Classic’s Proof-of-Work consensus and immutability principles. The Olympia Treasury (see ECIP-1112) receives all `BASEFEE` revenue, which is governed on-chain by Olympia DAO (ECIP-1113) through the Ethereum Classic Funding Proposal process (ECIP-1114), and executed off-chain by Ethereum Classic DAO LLC as a legal interface for compliance, payments, and treasury administration.
 
 The proposal excludes upgrades tied to Ethereum’s transition to Proof-of-Stake or those irrelevant to Ethereum Classic’s architecture, such as validator withdrawal operations and randomness derived from the beacon chain. Implementation requires coordination across client software and network participants for a scheduled hard fork at block heights to be determined on Mordor Testnet and Ethereum Classic Mainnet.
 
@@ -25,7 +25,7 @@ The proposal excludes upgrades tied to Ethereum’s transition to Proof-of-Stake
 #### Included in Olympia Upgrade
 
 - **EIP-1559 – Fee Market Change**
-Introduces a new transaction type with a dynamically adjusting base fee per gas and an optional priority tip to incentivize miners. On Ethereum Classic, instead of being burned, the `BASEFEE` is redirected to the **Olympia Treasury**, an open on-chain development fund. This design aligns incentives between developers, miners, and users by converting transaction demand into sustainable network funding. As ETC's block reward continues to decline under [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) monetary policy, this mechanism ensures the network retains a long-term **security and development budget** tied directly to economic activity on-chain.
+Introduces a new transaction type with a dynamically adjusting base fee per gas and an optional priority tip to incentivize miners. On Ethereum Classic, instead of being burned (as on Ethereum Mainnet), the `BASEFEE` is retained and redirected to the **Olympia Treasury**, an open on-chain development fund. This design aligns incentives between developers, miners, and users by converting transaction demand into sustainable network funding. As ETC's block reward continues to decline under [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) monetary policy, this mechanism ensures the network retains a long-term **security and development budget** tied directly to economic activity on-chain.
 
 - **EIP-3198 – BASEFEE Opcode**
 Adds a new opcode that allows smart contracts to access the current block’s basefee, as defined by EIP-1559. This enables more accurate on-chain gas estimation and supports modern fee-aware applications.
@@ -61,7 +61,7 @@ The Olympia upgrade activates the following EIPs on the Ethereum Classic network
 #### Included from London Hard Fork
 
 [EIP-1559](https://eips.ethereum.org/EIPS/eip-1559) – Fee Market Change  
-Introduces a new transaction type with a dynamic `basefee`, redirected per block to the Olympia Treasury, and an optional miner tip.
+Introduces a new transaction type with a dynamic `basefee`, redirected per block to the Olympia Treasury (ECIP-1112), while miner tips remain payable to block producers.
 
 [EIP-3198](https://eips.ethereum.org/EIPS/eip-3198) – BASEFEE Opcode
 Adds the BASEFEE opcode (0x48) to the EVM, allowing smart contracts to query the current block’s base fee.
@@ -81,6 +81,8 @@ __Standards Compliance__: Supporting canonical EIPs is critical for application-
 ### Real-World Precedents for BASEFEE Redirection
 
 While Ethereum Mainnet burns the `BASEFEE` under EIP-1559, a small number of EVM-compatible networks have chosen to redirect this fee to protocol treasuries instead. For example, the **Ronin** sidechain (Axie Infinity) routes base fee revenue to its [Ronin Treasury contract](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217), while **Celo** (a Proof-of-Stake L1) directs base fees to a [Gas Fee Handler contract](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438) governed by its DAO. These implementations demonstrate that treating `BASEFEE` as protocol income — rather than as a deflationary burn — is a viable and increasingly adopted alternative. By doing so, Ethereum Classic aligns with a growing trend toward using network activity to fund decentralized development in a sustainable, transparent, and incentive-aligned manner.
+
+Other networks such as **Mantle** and **Polygon CDK** also incorporate protocol revenue flows into DAO treasuries through modular treasury contracts. While not all use the `BASEFEE` directly, these implementations support the broader design of EVM-aligned, treasury-governed ecosystems.
 
 ### Implementation
 
@@ -104,7 +106,7 @@ Testing should include full validation of:
 
 Community coordination is required to finalize testnet and mainnet fork block numbers, along with updated client releases that embed the Olympia fork rules.
 
-Implementation of the Olympia Treasury and its governance is defined in ECIP-1112 and ECIP-1113 respectively. This ECIP solely introduces the protocol-level redirection logic and opcode activation.
+Implementation of the Olympia Treasury (ECIP-1112) and Olympia DAO governance (ECIP-1113) — including its legal interface via ECIP-1114 — are defined separately. This ECIP strictly introduces the on-chain redirection mechanism and EVM upgrades. This ECIP solely introduces the protocol-level redirection logic and opcode activation.
 
 ### Reference Implementation
 
@@ -135,6 +137,8 @@ No new consensus-critical vulnerabilities are introduced by this upgrade. The `B
 
 Client implementers must ensure that redirecting the `BASEFEE` to the Olympia Treasury does not introduce rounding errors or state inconsistencies. Reference vectors from Ethereum Mainnet should be adjusted to reflect treasury accumulation rather than burn behavior.
 
+As EIP-1559 and EIP-3198 are already deployed across major EVM networks (ETH, BSC, OP Stack), they have received extensive production testing and formal auditing. Only the redirect logic to the Olympia Treasury diverges from Ethereum’s reference model, and must be carefully validated.
+
 ## Copyright
 
 Copyright and related rights waived via  
@@ -153,7 +157,7 @@ This matrix serves as a foundation for community discussion and potential inclus
 
 ### ✅ Candidates for Future Inclusion
 
-> These EIPs are not included in ECIP-1111 but are technically and philosophically compatible with Ethereum Classic’s Proof-of-Work model. They are recommended for inclusion in a future hard fork following further community review.
+These EIPs are not included in ECIP-1111 but are technically and philosophically compatible with Ethereum Classic’s Proof-of-Work model. Their future inclusion would follow the ECIP-1000 process and require consensus among core developers, miners, and ecosystem stakeholders.
 
 | EIP   | Title                                  | Reason to Include                                                                                     |
 |-------|----------------------------------------|--------------------------------------------------------------------------------------------------------|
