--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -114,6 +114,7 @@ The DAO LLC functions solely as a **compliance conduit**, enabling lawful execut
 
 The Ethereum Classic Funding Proposal (ECFP) process formalizes a community-governed method for allocating protocol-level funds from the Olympia Treasury. This structure ensures funding decisions are transparent, inclusive, and aligned with the Ethereum Classic network’s long-term values.
 
+
 Key reasons for defining the ECFP process include:
 
 - **Clarity and Accountability**  
@@ -131,7 +132,8 @@ Key reasons for defining the ECFP process include:
 - **Alignment with ETC Principles**  
   The ECFP process reflects Ethereum Classic’s commitment to decentralization, sovereignty, and trust minimization. It replaces opaque, foundation-based grantmaking with a public, rules-based system that any community member can engage with.
 
-This ECIP ensures that the Olympia Treasury — funded via ECIP-1112 and governed via ECIP-1113 — has a robust and community-driven framework for advancing the Ethereum Classic ecosystem. The ECFP framework ensures Ethereum Classic evolves with the DAO-first ethos of modern decentralized ecosystems, bringing funding structure comparable to processes like Arbitrum’s AIP framework, Optimism’s RPGF, and Celo’s Community Fund. By defining a public, reproducible, and accountable pipeline for distributing protocol-level resources, the ECFP system empowers ETC to grow sustainably while preserving the network’s founding principles.
+This ECIP ensures that the Olympia Treasury — funded via ECIP-1112 and governed via ECIP-1113 — has a robust and community-driven framework for advancing the Ethereum Classic ecosystem. The ECFP framework ensures Ethereum Classic evolves with the DAO-first ethos of modern decentralized ecosystems, bringing funding structure comparable to processes like Arbitrum’s AIP framework, Optimism’s RPGF, and Celo’s Community Fund. By defining a public, reproducible, and accountable pipeline for distributing protocol-level resources, the ECFP system empowers ETC to grow sustainably while preserving its founding principles of immutability, decentralization, and user sovereignty.
+
 
 ### Implementation
 
@@ -143,7 +145,7 @@ Key implementation elements include:
 
 - A dedicated ECFP submission portal SHALL be provided at `https://github.com/ethereumclassic/ECFPs`.
 - Proposals MUST include a valid ECFP number (assigned sequentially), title, rationale, funding amount, recipient address, and milestone schedule.
-- Metadata pointers (e.g., IPFS, Arweave) SHALL be used for full-text proposal storage and human-readable content.
+- Full-text proposals SHALL be stored using metadata pointers (e.g., IPFS CID or Arweave URL) to ensure permanence and auditability.
 - Proposals SHOULD use the [ECFP Markdown template](https://github.com/ethereumclassic/ECFPs/blob/main/ecfp-template.md) to ensure consistency and ease of review.
 - Off-chain proposal metadata MUST be stored in a content-addressable format (e.g., IPFS CID or Arweave URL) and referenced in the on-chain proposal via metadata hash or URL.
 - Proposals MAY include links to mockups, prototypes, GitHub repos, or community endorsements as part of their metadata payload.
