--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -5,7 +5,7 @@ title: Olympia Treasury Contract
 status: Draft
 type: Meta
 requires: 1111
-author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
+author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
 license: CC0-1.0
