--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -4,6 +4,7 @@ ecip: 1111
 title: Olympia EVM and Protocol Upgrades
 status: Draft
 type: Meta
+requires: 1112, 1113, 1114
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
