--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -4,7 +4,7 @@ ecip: 1112
 title: Olympia Treasury Contract
 status: Draft
 type: Meta
-requires: 1111
+requires: 1111, 1113, 1114
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
