--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -4,7 +4,7 @@ ecip: 1113
 title: Olympia DAO Governance Framework
 status: Draft
 type: Meta
-requires: 1111, 1112
+requires: 1111, 1112, 1114
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
