Critique #1: Whale Domination of DAO
 Critique #1: Whale Domination of DAO

--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -88,9 +88,12 @@ Key motivations include:
 
 - **Resilience**: Open governance enables a diverse and global group of participants to shape Ethereum Classic’s roadmap, making the network more resilient to capture or stagnation.
 
-The Olympia DAO does not seek to control the Ethereum Classic protocol itself but instead manages the allocation of funds in support of its development and infrastructure. Protocol upgrades will continue to follow the ECIP process (ECIP-1000), while funding decisions for implementation and ecosystem grants are governed by this DAO.
+- **On Plutocracy Risk and Voting Design**:  
+  A common critique of token-weighted voting systems is that they may disproportionately empower large holders (“whales”) while excluding valuable contributors without significant capital. The Olympia DAO governance model acknowledges this concern and is intentionally designed with modularity and upgradeability to support alternative models over time.
 
-DAOs on networks like Celo and Ronin serve as governance layers for treasury flows derived from gas fees. By modeling Olympia DAO similarly—where BASEFEE revenue is transparently governed through tokenholder proposals and on-chain execution—Ethereum Classic can adopt a mature and decentralized mechanism aligned with EVM ecosystem practices. Olympia DAO mirrors the modular design adopted by other successful EVM DAO frameworks. Celo routes gas fees through a community-governed handler. Ronin Treasury proposals are governed by tokenholder votes. MantleDAO manages sequencer revenue allocation through DAO smart contracts. Olympia DAO follows this emerging pattern by cleanly separating treasury execution (ECIP-1112) from governance intent (this ECIP), ensuring long-term resilience and governance upgradability.
+  While the initial implementation may use token-weighted or stake-based voting for simplicity and auditability, the DAO supports migration to more inclusive models — such as soulbound reputation tokens, quadratic voting, delegated councils, or Proof-of-Contribution attestations — through future governance proposals.
+
+  Importantly, the Olympia DAO does **not predefine or pre-allocate any governance token**. Its issuance, supply, and distribution model must be proposed and approved through the DAO itself, allowing the community to shape governance incentives in a transparent, merit-based way. This flexibility ensures that governance remains aligned with Ethereum Classic’s values of sovereignty, openness, and resistance to centralized control.
 
 ### Related Work
 
