Critique #2: Why not use a multisig instead of a DAO?
Critique #2: Why not use a multisig instead of a DAO?

--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -88,12 +88,31 @@ Key motivations include:
 
 - **Resilience**: Open governance enables a diverse and global group of participants to shape Ethereum Classic’s roadmap, making the network more resilient to capture or stagnation.
 
-- **On Plutocracy Risk and Voting Design**:  
+- **On Plutocracy Risk and Voting Design**  
   A common critique of token-weighted voting systems is that they may disproportionately empower large holders (“whales”) while excluding valuable contributors without significant capital. The Olympia DAO governance model acknowledges this concern and is intentionally designed with modularity and upgradeability to support alternative models over time.
 
   While the initial implementation may use token-weighted or stake-based voting for simplicity and auditability, the DAO supports migration to more inclusive models — such as soulbound reputation tokens, quadratic voting, delegated councils, or Proof-of-Contribution attestations — through future governance proposals.
 
   Importantly, the Olympia DAO does **not predefine or pre-allocate any governance token**. Its issuance, supply, and distribution model must be proposed and approved through the DAO itself, allowing the community to shape governance incentives in a transparent, merit-based way. This flexibility ensures that governance remains aligned with Ethereum Classic’s values of sovereignty, openness, and resistance to centralized control.
+
+- **DAO vs. Multisig Governance**  
+  A common alternative to DAO-based governance is to use a multisignature wallet managed by a small group of trusted individuals. While multisigs are simpler to deploy and have been used effectively in some early ecosystems, they introduce centralization risks, opaque decision-making, and limited scalability.
+
+  The Olympia Upgrade deliberately avoids placing treasury control in the hands of any small group — no matter how well-intentioned — in favor of a permissionless, transparent governance process where funding decisions are made by the community through public proposals and on-chain voting.
+
+  Key limitations of multisig-based funding models include:
+  - **Closed Membership**: Only selected signers may participate in decision-making.
+  - **Limited Transparency**: Rationale for fund disbursements may not be recorded or auditable.
+  - **Stagnation Risk**: If multisig signers go inactive, governance halts.
+  - **No Community Accountability**: The wider network has no formal voice in fund allocation.
+
+  In contrast, a DAO-based system:
+  - Enables **open proposal submission** by anyone.
+  - Enforces **transparent voting**, quorum, and execution rules.
+  - **Separates execution from discretion**, reducing trust assumptions.
+  - Is **upgradeable and resilient**, supporting future improvements to voting and accountability mechanisms.
+
+  The Olympia DAO still supports the use of a **time-locked, emergency multisig** as a last-resort mechanism to pause or delay malicious proposals — but never to approve or spend funds unilaterally. This preserves decentralization while mitigating unforeseen governance attacks.
 
 ### Related Work
 
