Critique #3: DAO upgradability risk
Critique #3: DAO upgradability risk

--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -66,9 +66,11 @@ The DAO MUST include the following core components:
 
 #### Contract Properties
 
-- DAO logic MUST be implemented as modular, upgradeable smart contracts with clear interfaces.
+- DAO logic MUST be implemented as modular, upgradeable smart contracts with clear interfaces. Any upgrade paths MUST be governed via on-chain proposal, meet quorum and threshold requirements, and include a timelocked delay before execution.
 - The DAO SHALL have no centralized admin control over treasury funds.
 - Emergency governance MAY be enabled via community-elected multi-signature fallback to pause or freeze malicious proposals, subject to public audit and strict usage limitations.
+- The Olympia Treasury contract (defined in ECIP-1112) is immutable. It SHALL only respond to authorized calls from the DAO executor contract and SHALL reject any upgrades, direct admin intervention, or withdrawal requests from unauthorized sources. This separation ensures that even if the DAO is upgraded, treasury funds remain secure and auditable under immutable rules.
+
 
 ### Rationale
 
@@ -209,6 +211,11 @@ The Olympia DAO introduces a governance layer that must be designed with strong 
 - **Upgradability Risks**: If the governance system is designed to be upgradeable, those upgrade paths must themselves be subject to governance approval and time-locked delay to prevent hostile takeovers.
 
 - **Client Divergence**: Clients must verify that governance-triggered treasury withdrawals match the approved proposals. Inconsistencies between governance execution and treasury state could lead to consensus-breaking behavior.
+
+- **Upgradeability and Treasury Integrity**:  
+  While the Olympia DAO is designed for modular upgradeability to support evolving governance mechanisms, this flexibility does not extend to the treasury itself. The Olympia Treasury contract is immutable, and cannot be upgraded, withdrawn from, or modified — even by future DAO proposals. DAO upgrades are limited to governance logic only and must pass full proposal review, quorum, and timelock procedures.
+
+  This architectural separation ensures that no future DAO, governance token holder, or developer can unilaterally seize or misallocate protocol funds. Treasury disbursement always requires an on-chain governance proposal, public scrutiny, and time-locked execution via secure interfaces.
 
 Thorough testing on Mordor Testnet, peer review from ecosystem participants, and third-party audits of the DAO and treasury contracts are critical before mainnet deployment.
 
