Critique #4: DAO Inactivity or Capture Risk
Critique #4: DAO Inactivity or Capture Risk

--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -67,8 +67,21 @@ The DAO MUST include the following core components:
 #### Contract Properties
 
 - DAO logic MUST be implemented as modular, upgradeable smart contracts with clear interfaces. Any upgrade paths MUST be governed via on-chain proposal, meet quorum and threshold requirements, and include a timelocked delay before execution.
+
 - The DAO SHALL have no centralized admin control over treasury funds.
-- Emergency governance MAY be enabled via community-elected multi-signature fallback to pause or freeze malicious proposals, subject to public audit and strict usage limitations.
+
+- Emergency governance MAY be enabled via a time-locked, community-elected multi-signature fallback. This multisig SHALL be authorized only to:
+  - Pause proposal execution,
+  - Reject or quarantine clearly malicious proposals,
+  - Trigger a DAO reinitialization vote in case of governance failure or capture.
+
+  The multisig SHALL NOT have the ability to:
+  - Submit new funding proposals,
+  - Disburse treasury funds,
+  - Override DAO votes or execution without explicit on-chain reauthorization.
+
+  Activation of the emergency multisig MUST be triggered via governance vote, SHALL be time-limited (e.g., 30-day emergency state), and MUST be publicly auditable. This mechanism exists solely to defend against stagnation or capture — not to replace decentralized governance.
+
 - The Olympia Treasury contract (defined in ECIP-1112) is immutable. It SHALL only respond to authorized calls from the DAO executor contract and SHALL reject any upgrades, direct admin intervention, or withdrawal requests from unauthorized sources. This separation ensures that even if the DAO is upgraded, treasury funds remain secure and auditable under immutable rules.
 
 
@@ -113,6 +126,13 @@ Key motivations include:
   - Enforces **transparent voting**, quorum, and execution rules.
   - **Separates execution from discretion**, reducing trust assumptions.
   - Is **upgradeable and resilient**, supporting future improvements to voting and accountability mechanisms.
+
+  - **On Inactivity, Capture, and Fallback Recovery**  
+  A legitimate concern in any DAO system is the risk of governance stagnation (low participation) or capture (whale dominance). To address this without undermining decentralization, the Olympia DAO includes an optional, strictly limited fallback: a time-locked emergency multisig that can pause execution or trigger recovery votes, but **cannot spend funds** or override the will of the community.
+
+  This fallback ensures that if the DAO becomes non-functional — whether due to inactivity, vote deadlock, or smart contract failure — the community retains a controlled mechanism to restore governance integrity. Critically, the fallback multisig is elected by DAO vote, and its powers are revocable, auditable, and time-limited.
+
+  This approach avoids hardcoding centralized control or privileged roles, while still protecting the protocol’s development pipeline from being frozen indefinitely.
 
   The Olympia DAO still supports the use of a **time-locked, emergency multisig** as a last-resort mechanism to pause or delay malicious proposals — but never to approve or spend funds unilaterally. This preserves decentralization while mitigating unforeseen governance attacks.
 
@@ -216,6 +236,9 @@ The Olympia DAO introduces a governance layer that must be designed with strong 
   While the Olympia DAO is designed for modular upgradeability to support evolving governance mechanisms, this flexibility does not extend to the treasury itself. The Olympia Treasury contract is immutable, and cannot be upgraded, withdrawn from, or modified — even by future DAO proposals. DAO upgrades are limited to governance logic only and must pass full proposal review, quorum, and timelock procedures.
 
   This architectural separation ensures that no future DAO, governance token holder, or developer can unilaterally seize or misallocate protocol funds. Treasury disbursement always requires an on-chain governance proposal, public scrutiny, and time-locked execution via secure interfaces.
+
+- **Governance Inactivity or Capture**:  
+  To mitigate long-term governance stagnation or tokenholder collusion, the DAO MAY authorize a time-limited fallback multisig capable of pausing execution and initiating recovery proposals. This multisig MUST be elected, transparent, and auditable, with no treasury withdrawal privileges. Such a mechanism ensures governance continuity without compromising decentralization.
 
 Thorough testing on Mordor Testnet, peer review from ecosystem participants, and third-party audits of the DAO and treasury contracts are critical before mainnet deployment.
 
